--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,7 +17,6 @@
     <servlet-name>search-servlet</servlet-name>
     <url-pattern>/search</url-pattern>
   </servlet-mapping>
-
   <servlet>
     <servlet-name>spot-info-servlet</servlet-name>
     <servlet-class>request_handlers/SpotInfoServlet</servlet-class>
@@ -26,7 +25,6 @@
     <servlet-name>spot-info-servlet</servlet-name>
     <url-pattern>/spotinfo</url-pattern>
   </servlet-mapping>
-
   <servlet>
     <servlet-name>calc-price-servlet</servlet-name>
     <servlet-class>request_handlers/CalcPriceServlet</servlet-class>
@@ -35,7 +33,6 @@
     <servlet-name>calc-price-servlet</servlet-name>
     <url-pattern>/calcprice</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>rent-spot-servlet</servlet-name>
     <servlet-class>request_handlers/RentSpotServlet</servlet-class>
@@ -44,7 +41,6 @@
     <servlet-name>rent-spot-servlet</servlet-name>
     <url-pattern>/rentspot</url-pattern>
   </servlet-mapping>
-    
   <servlet>
     <servlet-name>park-info-servlet</servlet-name>
     <servlet-class>request_handlers/ParkInfoServlet</servlet-class>
@@ -53,7 +49,6 @@
     <servlet-name>park-info-servlet</servlet-name>
     <url-pattern>/parkinfo</url-pattern>
   </servlet-mapping>
-      
   <servlet>
     <servlet-name>signin-servlet</servlet-name>
     <servlet-class>request_handlers/SignInServlet</servlet-class>
@@ -62,7 +57,6 @@
     <servlet-name>signin-servlet</servlet-name>
     <url-pattern>/signin</url-pattern>
   </servlet-mapping>
-        
   <servlet>
     <servlet-name>signout-servlet</servlet-name>
     <servlet-class>request_handlers/SignOutServlet</servlet-class>
@@ -71,7 +65,6 @@
     <servlet-name>signout-servlet</servlet-name>
     <url-pattern>/signout</url-pattern>
   </servlet-mapping>
-        
   <servlet>
     <servlet-name>signup-servlet</servlet-name>
     <servlet-class>request_handlers/SignUpServlet</servlet-class>
@@ -80,7 +73,6 @@
     <servlet-name>signup-servlet</servlet-name>
     <url-pattern>/signup</url-pattern>
   </servlet-mapping>
-        
   <servlet>
     <servlet-name>user-profile-servlet</servlet-name>
     <servlet-class>request_handlers/UserProfileServlet</servlet-class>
@@ -89,7 +81,6 @@
     <servlet-name>user-profile-servlet</servlet-name>
     <url-pattern>/userprofile</url-pattern>
   </servlet-mapping>
-          
   <servlet>
     <servlet-name>select-city-servlet</servlet-name>
     <servlet-class>request_handlers/SelectCityServlet</servlet-class>
@@ -98,8 +89,6 @@
     <servlet-name>select-city-servlet</servlet-name>
     <url-pattern>/selectcity</url-pattern>
   </servlet-mapping>
-  
-            
   <servlet>
     <servlet-name>cars-servlet</servlet-name>
     <servlet-class>request_handlers/CarsServlet</servlet-class>
@@ -107,5 +96,21 @@
   <servlet-mapping>
     <servlet-name>cars-servlet</servlet-name>
     <url-pattern>/cars</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>update-sensors-servlet</servlet-name>
+    <servlet-class>request_handlers/UpdateSensorsServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>update-sensors-servlet</servlet-name>
+    <url-pattern>/updatesensors</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>read-sensor-servlet</servlet-name>
+    <servlet-class>request_handlers/ReadSensorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>read-sensor-servlet</servlet-name>
+    <url-pattern>/readsensor</url-pattern>
   </servlet-mapping>
 </web-app>
