--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,34 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <listener>
+    <listener-class>server.Server</listener-class>
+  </listener>
+    <filter>
+	    <filter-name>authentication-filter</filter-name>
+	    <filter-class>request_handlers.filters.AuthenticationFilter</filter-class>
+	    <init-param>
+	        <param-name>excludedUrls</param-name>
+	        <!-- Comma separated list of excluded servlets  -->
+	        <param-value>/signin,/signup,/signout</param-value>
+    	</init-param>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>authentication-filter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+    <filter>
+	    <filter-name>prepare-city-filter</filter-name>
+	    <filter-class>request_handlers.filters.PrepareCityFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>prepare-city-filter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
   <servlet>
     <servlet-name>search-servlet</servlet-name>
     <servlet-class>request_handlers/SearchServlet</servlet-class>
@@ -122,11 +150,11 @@
     <url-pattern>/readsensor</url-pattern>
   </servlet-mapping>
   <servlet>
-  	<servlet-name>transaction-servlet</servlet-name>
-  	<servlet-class>request_handlers/TransactionServlet</servlet-class>
+    <servlet-name>transaction-servlet</servlet-name>
+    <servlet-class>request_handlers/TransactionServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>transaction-servlet</servlet-name>
-  	<url-pattern>/transaction</url-pattern>
+    <servlet-name>transaction-servlet</servlet-name>
+    <url-pattern>/transaction</url-pattern>
   </servlet-mapping>
 </web-app>
