--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,15 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <context-param>
+    <param-name>dataFilePaths</param-name>
+    <param-value>/home/jam/Parking/data.csv</param-value>
+    <!-- <param-value>/home/jam/Parking/data.csv,/home/jam/Parking/data_tehran.csv</param-value> -->
+  </context-param>
+  <context-param>
+    <param-name>citiesToLoad</param-name>
+    <param-value>tehran,babolsar</param-value>
+  </context-param>
   <listener>
     <listener-class>server.Server</listener-class>
   </listener>
@@ -17,8 +26,7 @@
 	    <filter-class>request_handlers.filters.AuthenticationFilter</filter-class>
 	    <init-param>
 	        <param-name>excludedUrls</param-name>
-	        <!-- Comma separated list of excluded servlets  -->
-	        <param-value>/signin,/signup,/signout</param-value>
+	        <param-value>/signin,/signup,/signout,/sensors.jsp,/index.html,/new_changes.html,/request_info.html,/request_info_sensors.html,/basestation_request_manual.html,/data_format.json</param-value>
     	</init-param>
 	</filter>
 	
@@ -32,8 +40,7 @@
 	    <filter-class>request_handlers.filters.PrepareCityFilter</filter-class>
 	    <init-param>
 	        <param-name>excludedUrls</param-name>
-	        <!-- Comma separated list of excluded servlets  -->
-	        <param-value>/selectcity</param-value>
+	        <param-value>/signin,/signup,/signout,/selectcity,/sensors.jsp,/index.html,/new_changes.html,/request_info.html,/request_info_sensors.html,/basestation_request_manual.html,/data_format.json</param-value>
     	</init-param>
 	</filter>
 	
@@ -41,6 +48,7 @@
 	    <filter-name>prepare-city-filter</filter-name>
 	    <url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
 	
   <servlet>
     <servlet-name>search-area-servlet</servlet-name>
@@ -71,7 +79,7 @@
     <servlet-class>request_handlers/ReserveServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Reserve-servlet</servlet-name>
+    <servlet-name>reserve-servlet</servlet-name>
     <url-pattern>/reserve</url-pattern>
   </servlet-mapping>
   <servlet>
