--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,45 +12,42 @@
   <context-param>
     <param-name>dataFilePaths</param-name>
     <param-value>/home/jam/eclipse-workspace/TestDatabaseProject/data.json</param-value>
-    <!-- <param-value>/root/data/data.json</param-value>-->
-    <!-- <param-value>/home/jam/Parking/data.csv,/home/jam/Parking/data_tehran.csv</param-value> -->
   </context-param>
   <context-param>
     <param-name>citiesToLoad</param-name>
     <param-value>Tehran</param-value>
   </context-param>
+  <context-param>
+    <param-name>timeFormatString</param-name>
+    <param-value>HH:mm:ss</param-value>
+  </context-param>
   <listener>
     <listener-class>server.Server</listener-class>
   </listener>
-    <filter>
-	    <filter-name>authentication-filter</filter-name>
-	    <filter-class>request_handlers.filters.AuthenticationFilter</filter-class>
-	    <init-param>
-	        <param-name>excludedUrls</param-name>
-	        <param-value>/signin,/signup,/signout,/sensors.jsp,/index.html,/new_changes.html,/request_info.html,/request_info_sensors.html,/basestation_request_manual.html,/data_format.json</param-value>
-    	</init-param>
-	</filter>
-	
-	<filter-mapping>
-	    <filter-name>authentication-filter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	</filter-mapping>
-
-    <filter>
-	    <filter-name>prepare-city-filter</filter-name>
-	    <filter-class>request_handlers.filters.PrepareCityFilter</filter-class>
-	    <init-param>
-	        <param-name>excludedUrls</param-name>
-	        <param-value>/signin,/signup,/signout,/selectcity,/sensors.jsp,/index.html,/new_changes.html,/request_info.html,/request_info_sensors.html,/basestation_request_manual.html,/data_format.json</param-value>
-    	</init-param>
-	</filter>
-	
-	<filter-mapping>
-	    <filter-name>prepare-city-filter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
-	
+  <filter>
+    <filter-name>authentication-filter</filter-name>
+    <filter-class>request_handlers.filters.AuthenticationFilter</filter-class>
+    <init-param>
+      <param-name>excludedUrls</param-name>
+      <param-value>/signin,/signup,/signout,/sensors.jsp,/index.html,/new_changes.html,/request_info.html,/request_info_sensors.html,/basestation_request_manual.html,/data_format.json</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>authentication-filter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>prepare-city-filter</filter-name>
+    <filter-class>request_handlers.filters.PrepareCityFilter</filter-class>
+    <init-param>
+      <param-name>excludedUrls</param-name>
+      <param-value>/signin,/signup,/signout,/selectcity,/sensors.jsp,/index.html,/new_changes.html,/request_info.html,/request_info_sensors.html,/basestation_request_manual.html,/data_format.json</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>prepare-city-filter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   <servlet>
     <servlet-name>search-area-servlet</servlet-name>
     <servlet-class>request_handlers/SearchAreaServlet</servlet-class>
